--- a/Week2.css
+++ b/Week2.css
@@ -1,123 +1,41 @@
 body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f2f2f2;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   height: 100vh;
-  background: gray;
-  margin: 0;
-  font-size: 120%;
-  background-image: url("https://source.unsplash.com/1600x900/?nature,landscape");
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
- } 
- 
- .card {
-  background-color: black;
-  padding: 2em;
-  color: white;
-  border-radius: 30px;
-  width: 100%;
-  max-width: 420px;
-  margin: 1em;
-  box-shadow: 1px 3px 5px rgba(141, 138, 138, 0.1);
- }
- 
- .search {
-  display: flex;
-  align-items: center;
-  justify-content: center;
- }
- 
- input.search-bar {
+}
+h1 {
+  margin-bottom: 20px;
+  color: #333;
+}
+#map {
+  height: 400px;
+  width: 80%;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  width: 80%;
+}
+button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
   border: none;
-  outline: none;
-  padding: 0.4em 1em;
-  border-radius: 30px;
-  background-color: #534b4b;
-  color: white;
-  font-size: 120%;
-  width: calc(100% - 100px);
-  font-family: 'Roboto';
-  letter-spacing: 2px;
- }
- 
- button {
-  margin: 0.5em;
-  border-radius: 50%;
-  border: none;
-  height: 3em;
-  width: 3em;
-  outline: none;
-  background-color: #534b4b;
-  color: white;
+  border-radius: 5px;
   cursor: pointer;
-  transition: 0.3s ease-in-out;
- }
- 
- button:hover {
-  background-color: #9b7979;
- }
- 
- .weather {
-  font-weight: bold;
- }
- 
- .weather.loading {
-  visibility: hidden;
-  max-height: 20px;
-  position: relative;
- }
- 
- .weather.loading::after {
-  position: absolute;
-  top: 0;
-  color: white;
-  visibility: visible;
-  content: "Page Loading...";
-  font-weight: bold;
-  left: 30px;
- }
- 
- h1.city {
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  font-size: 1.3em;
- }
- 
- h1.temp {
-  margin: 0;
-  margin-bottom: 0.5em;
-  font-size: 1.3em;
- }
- 
- .flex {
-  display: flex;
-  align-items: center;
-  margin-left: -10px;
-  margin-bottom: 0.5em;
- }
- 
- .flex .description {
-  text-transform: capitalize;
-  margin-left: 8px;
- }
- 
- .humidity {
-  font-size: 1.2em;
-  margin-bottom: 0.5em;
- }
- 
- @media screen and (max-width: 420px) {
-  .card {
-    border-radius: 35px;
-    max-width: 320px;
-   }
- 
-  input.search-bar {
-   padding: 0.3em 0.8em;
-   border-radius: 30px;
-   background-color: #534b4b;
-   color: white;
-   width: calc(100% - 100px);
-   letter-spacing: 1px;
-  }
- }
+  transition: background-color 0.3s ease;
+}
+button:hover {
+  background-color: #0056b3;
+}
